@@ -1480,19 +1480,19 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkFileChooserButton" id="album_filechooser">
+		    <widget class="GtkButton" id="button64">
 		      <property name="visible">True</property>
-		      <property name="title" translatable="yes">Select A File</property>
-		      <property name="action">GTK_FILE_CHOOSER_ACTION_OPEN</property>
-		      <property name="local_only">True</property>
-		      <property name="show_hidden">False</property>
-		      <property name="do_overwrite_confirmation">False</property>
-		      <property name="width_chars">-1</property>
+		      <property name="can_focus">True</property>
+		      <property name="label">gtk-clear</property>
+		      <property name="use_stock">True</property>
+		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		      <property name="focus_on_click">True</property>
+		      <signal name="clicked" handler="id3_del_album_txt" last_modification_time="Wed, 27 Dec 2006 23:11:40 GMT"/>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
-		      <property name="expand">True</property>
-		      <property name="fill">True</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
 		    </packing>
 		  </child>
 
@@ -1510,7 +1510,12 @@
 		      <property name="padding">0</property>
 		      <property name="expand">False</property>
 		      <property name="fill">False</property>
+		      <property name="pack_type">GTK_PACK_END</property>
 		    </packing>
+		  </child>
+
+		  <child>
+		    <placeholder/>
 		  </child>
 		</widget>
 		<packing>
@@ -1678,19 +1683,19 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkFileChooserButton" id="artist_filechooser">
+		    <widget class="GtkButton" id="button65">
 		      <property name="visible">True</property>
-		      <property name="title" translatable="yes">Select A File</property>
-		      <property name="action">GTK_FILE_CHOOSER_ACTION_OPEN</property>
-		      <property name="local_only">True</property>
-		      <property name="show_hidden">False</property>
-		      <property name="do_overwrite_confirmation">False</property>
-		      <property name="width_chars">-1</property>
+		      <property name="can_focus">True</property>
+		      <property name="label">gtk-clear</property>
+		      <property name="use_stock">True</property>
+		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		      <property name="focus_on_click">True</property>
+		      <signal name="clicked" handler="id3_del_artist_txt" last_modification_time="Wed, 27 Dec 2006 23:10:18 GMT"/>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
-		      <property name="expand">True</property>
-		      <property name="fill">True</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
 		    </packing>
 		  </child>
 
@@ -1708,7 +1713,12 @@
 		      <property name="padding">0</property>
 		      <property name="expand">False</property>
 		      <property name="fill">False</property>
+		      <property name="pack_type">GTK_PACK_END</property>
 		    </packing>
+		  </child>
+
+		  <child>
+		    <placeholder/>
 		  </child>
 		</widget>
 		<packing>
@@ -1876,19 +1886,19 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkFileChooserButton" id="lyric_filechooser">
+		    <widget class="GtkButton" id="button66">
 		      <property name="visible">True</property>
-		      <property name="title" translatable="yes">Select A File</property>
-		      <property name="action">GTK_FILE_CHOOSER_ACTION_OPEN</property>
-		      <property name="local_only">True</property>
-		      <property name="show_hidden">False</property>
-		      <property name="do_overwrite_confirmation">False</property>
-		      <property name="width_chars">-1</property>
+		      <property name="can_focus">True</property>
+		      <property name="label">gtk-clear</property>
+		      <property name="use_stock">True</property>
+		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		      <property name="focus_on_click">True</property>
+		      <signal name="clicked" handler="id3_del_song_lyric" last_modification_time="Wed, 27 Dec 2006 23:09:07 GMT"/>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
-		      <property name="expand">True</property>
-		      <property name="fill">True</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
 		    </packing>
 		  </child>
 
@@ -1906,7 +1916,12 @@
 		      <property name="padding">0</property>
 		      <property name="expand">False</property>
 		      <property name="fill">False</property>
+		      <property name="pack_type">GTK_PACK_END</property>
 		    </packing>
+		  </child>
+
+		  <child>
+		    <placeholder/>
 		  </child>
 		</widget>
 		<packing>
